# home-env-bootstrap

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  bootstrap  bootstrap.exe.manifest  build.rc  build.rs  file  rust-toolchain.toml  win-run-debug.sh  win-run-release.sh
.github/workflows/: push.yml
src/: main.rs  platform.rs
src/linux_tasks/: bash.rs  mod.rs
src/resources/: ansible.sh  backup.sh  clone-home-env.sh  colors.sh  docker.sh  dotfiles.sh  extra.sh  fish.sh  fzf.sh  github.sh  images.sh  java.sh  main.sh  nushell.sh  powershell.sh  rust.sh  sgpt.sh  systemd.sh  temp.sh  test.sh  wsl-context-menu-item.sh  wslu.sh  zig.sh
src/tasks/: bash.rs  choco.rs  connect_windows_terminal.rs  install_wsl.rs  mod.rs  move_sensitive_information.rs  nerd_font.rs  scheduled_task.rs  winget.rs
src/utility/: http.rs  mod.rs  process.rs  symlink.rs  task.rs
src/windows_tasks/: bash.rs  bootstrap_linux.rs  choco.rs  connect_windows_terminal.rs  download_bootstrap_linux.rs  install_wsl.rs  mod.rs  run_bootstrap_linux.rs  scheduled_task.rs  set_path.rs  winget.rs
