[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.2"
const-str = "0.5.7"
dirs = "5.0.1"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
reqwest = { version = "0.11.23", features = ["blocking"] }

[build-dependencies]
embed-resource = "2.4"

[profile.release]
debug = 0

[profile.dev]
debug = 0
